--- a/breast-cancer-diagnosis-model.ipynb
+++ b/breast-cancer-diagnosis-model.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dbd64561",
+   "id": "dc251f03",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2026-01-14T18:23:46.125206Z",
-     "iopub.status.busy": "2026-01-14T18:23:46.124910Z",
-     "iopub.status.idle": "2026-01-14T18:23:47.213847Z",
-     "shell.execute_reply": "2026-01-14T18:23:47.212826Z"
+     "iopub.execute_input": "2026-01-16T17:59:50.417257Z",
+     "iopub.status.busy": "2026-01-16T17:59:50.416876Z",
+     "iopub.status.idle": "2026-01-16T17:59:51.756994Z",
+     "shell.execute_reply": "2026-01-16T17:59:51.755765Z"
     },
     "papermill": {
-     "duration": 1.095999,
-     "end_time": "2026-01-14T18:23:47.215849",
+     "duration": 1.348665,
+     "end_time": "2026-01-16T17:59:51.759653",
      "exception": false,
-     "start_time": "2026-01-14T18:23:46.119850",
+     "start_time": "2026-01-16T17:59:50.410988",
      "status": "completed"
     },
     "tags": []
@@ -54,19 +54,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c5387b73",
+   "id": "63991c47",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-14T18:23:47.223069Z",
-     "iopub.status.busy": "2026-01-14T18:23:47.222257Z",
-     "iopub.status.idle": "2026-01-14T18:23:49.565095Z",
-     "shell.execute_reply": "2026-01-14T18:23:49.564175Z"
+     "iopub.execute_input": "2026-01-16T17:59:51.769289Z",
+     "iopub.status.busy": "2026-01-16T17:59:51.768849Z",
+     "iopub.status.idle": "2026-01-16T17:59:54.716418Z",
+     "shell.execute_reply": "2026-01-16T17:59:54.715185Z"
     },
     "papermill": {
-     "duration": 2.34857,
-     "end_time": "2026-01-14T18:23:49.567229",
+     "duration": 2.955258,
+     "end_time": "2026-01-16T17:59:54.718946",
      "exception": false,
-     "start_time": "2026-01-14T18:23:47.218659",
+     "start_time": "2026-01-16T17:59:51.763688",
      "status": "completed"
     },
     "tags": []
@@ -82,19 +82,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7874653d",
+   "id": "6a04b3a0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-14T18:23:49.574352Z",
-     "iopub.status.busy": "2026-01-14T18:23:49.573888Z",
-     "iopub.status.idle": "2026-01-14T18:23:49.617442Z",
-     "shell.execute_reply": "2026-01-14T18:23:49.616265Z"
+     "iopub.execute_input": "2026-01-16T17:59:54.727369Z",
+     "iopub.status.busy": "2026-01-16T17:59:54.726759Z",
+     "iopub.status.idle": "2026-01-16T17:59:54.780703Z",
+     "shell.execute_reply": "2026-01-16T17:59:54.779513Z"
     },
     "papermill": {
-     "duration": 0.049454,
-     "end_time": "2026-01-14T18:23:49.619506",
+     "duration": 0.060868,
+     "end_time": "2026-01-16T17:59:54.783051",
      "exception": false,
-     "start_time": "2026-01-14T18:23:49.570052",
+     "start_time": "2026-01-16T17:59:54.722183",
      "status": "completed"
     },
     "tags": []
@@ -236,19 +236,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "00cf591a",
+   "id": "f183bd76",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-14T18:23:49.627052Z",
-     "iopub.status.busy": "2026-01-14T18:23:49.626736Z",
-     "iopub.status.idle": "2026-01-14T18:23:49.632664Z",
-     "shell.execute_reply": "2026-01-14T18:23:49.631783Z"
+     "iopub.execute_input": "2026-01-16T17:59:54.791933Z",
+     "iopub.status.busy": "2026-01-16T17:59:54.791504Z",
+     "iopub.status.idle": "2026-01-16T17:59:54.798994Z",
+     "shell.execute_reply": "2026-01-16T17:59:54.797265Z"
     },
     "papermill": {
-     "duration": 0.011968,
-     "end_time": "2026-01-14T18:23:49.634590",
+     "duration": 0.014893,
+     "end_time": "2026-01-16T17:59:54.801452",
      "exception": false,
-     "start_time": "2026-01-14T18:23:49.622622",
+     "start_time": "2026-01-16T17:59:54.786559",
      "status": "completed"
     },
     "tags": []
@@ -266,19 +266,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "be995d98",
+   "id": "0fe815ed",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-14T18:23:49.641957Z",
-     "iopub.status.busy": "2026-01-14T18:23:49.641629Z",
-     "iopub.status.idle": "2026-01-14T18:23:49.649796Z",
-     "shell.execute_reply": "2026-01-14T18:23:49.648962Z"
+     "iopub.execute_input": "2026-01-16T17:59:54.810488Z",
+     "iopub.status.busy": "2026-01-16T17:59:54.809762Z",
+     "iopub.status.idle": "2026-01-16T17:59:54.818801Z",
+     "shell.execute_reply": "2026-01-16T17:59:54.817901Z"
     },
     "papermill": {
-     "duration": 0.014284,
-     "end_time": "2026-01-14T18:23:49.651763",
+     "duration": 0.015765,
+     "end_time": "2026-01-16T17:59:54.820823",
      "exception": false,
-     "start_time": "2026-01-14T18:23:49.637479",
+     "start_time": "2026-01-16T17:59:54.805058",
      "status": "completed"
     },
     "tags": []
@@ -312,13 +312,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7fbc4b0",
+   "id": "bee48718",
    "metadata": {
     "papermill": {
-     "duration": 0.002718,
-     "end_time": "2026-01-14T18:23:49.657505",
+     "duration": 0.003635,
+     "end_time": "2026-01-16T17:59:54.828171",
      "exception": false,
-     "start_time": "2026-01-14T18:23:49.654787",
+     "start_time": "2026-01-16T17:59:54.824536",
      "status": "completed"
     },
     "tags": []
@@ -330,19 +330,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dacce8f8",
+   "id": "8dda917f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-14T18:23:49.664508Z",
-     "iopub.status.busy": "2026-01-14T18:23:49.664137Z",
-     "iopub.status.idle": "2026-01-14T18:23:49.985657Z",
-     "shell.execute_reply": "2026-01-14T18:23:49.984791Z"
+     "iopub.execute_input": "2026-01-16T17:59:54.837139Z",
+     "iopub.status.busy": "2026-01-16T17:59:54.836773Z",
+     "iopub.status.idle": "2026-01-16T17:59:55.195797Z",
+     "shell.execute_reply": "2026-01-16T17:59:55.194575Z"
     },
     "papermill": {
-     "duration": 0.327305,
-     "end_time": "2026-01-14T18:23:49.987505",
+     "duration": 0.366684,
+     "end_time": "2026-01-16T17:59:55.198463",
      "exception": false,
-     "start_time": "2026-01-14T18:23:49.660200",
+     "start_time": "2026-01-16T17:59:54.831779",
      "status": "completed"
     },
     "tags": []
@@ -351,7 +351,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7b7b2ba19c40>"
+       "<seaborn.axisgrid.FacetGrid at 0x7d4f80346720>"
       ]
      },
      "execution_count": 6,
@@ -377,13 +377,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8df9ace",
+   "id": "56fffd41",
    "metadata": {
     "papermill": {
-     "duration": 0.003079,
-     "end_time": "2026-01-14T18:23:49.993847",
+     "duration": 0.003786,
+     "end_time": "2026-01-16T17:59:55.207040",
      "exception": false,
-     "start_time": "2026-01-14T18:23:49.990768",
+     "start_time": "2026-01-16T17:59:55.203254",
      "status": "completed"
     },
     "tags": []
@@ -395,19 +395,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bb90f7cd",
+   "id": "3b89eb76",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-14T18:23:50.001587Z",
-     "iopub.status.busy": "2026-01-14T18:23:50.001225Z",
-     "iopub.status.idle": "2026-01-14T18:23:50.114311Z",
-     "shell.execute_reply": "2026-01-14T18:23:50.113488Z"
+     "iopub.execute_input": "2026-01-16T17:59:55.216963Z",
+     "iopub.status.busy": "2026-01-16T17:59:55.216486Z",
+     "iopub.status.idle": "2026-01-16T17:59:55.359218Z",
+     "shell.execute_reply": "2026-01-16T17:59:55.358079Z"
     },
     "papermill": {
-     "duration": 0.11962,
-     "end_time": "2026-01-14T18:23:50.116534",
+     "duration": 0.151414,
+     "end_time": "2026-01-16T17:59:55.362314",
      "exception": false,
-     "start_time": "2026-01-14T18:23:49.996914",
+     "start_time": "2026-01-16T17:59:55.210900",
      "status": "completed"
     },
     "tags": []
@@ -422,25 +422,25 @@
     "X = df[cols]\n",
     "y = df['diagnosis_enc']\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state=1122)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state=12)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "993ac61a",
+   "id": "2b6d7543",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-14T18:23:50.124511Z",
-     "iopub.status.busy": "2026-01-14T18:23:50.123986Z",
-     "iopub.status.idle": "2026-01-14T18:23:50.133379Z",
-     "shell.execute_reply": "2026-01-14T18:23:50.132613Z"
+     "iopub.execute_input": "2026-01-16T17:59:55.371837Z",
+     "iopub.status.busy": "2026-01-16T17:59:55.371268Z",
+     "iopub.status.idle": "2026-01-16T17:59:55.381754Z",
+     "shell.execute_reply": "2026-01-16T17:59:55.380506Z"
     },
     "papermill": {
-     "duration": 0.015217,
-     "end_time": "2026-01-14T18:23:50.134974",
+     "duration": 0.017526,
+     "end_time": "2026-01-16T17:59:55.383736",
      "exception": false,
-     "start_time": "2026-01-14T18:23:50.119757",
+     "start_time": "2026-01-16T17:59:55.366210",
      "status": "completed"
     },
     "tags": []
@@ -458,19 +458,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "043b9130",
+   "id": "1eb5bec3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-14T18:23:50.142820Z",
-     "iopub.status.busy": "2026-01-14T18:23:50.142499Z",
-     "iopub.status.idle": "2026-01-14T18:23:50.177612Z",
-     "shell.execute_reply": "2026-01-14T18:23:50.176907Z"
+     "iopub.execute_input": "2026-01-16T17:59:55.393924Z",
+     "iopub.status.busy": "2026-01-16T17:59:55.392902Z",
+     "iopub.status.idle": "2026-01-16T17:59:55.437139Z",
+     "shell.execute_reply": "2026-01-16T17:59:55.434780Z"
     },
     "papermill": {
-     "duration": 0.045082,
-     "end_time": "2026-01-14T18:23:50.183252",
+     "duration": 0.051658,
+     "end_time": "2026-01-16T17:59:55.439523",
      "exception": false,
-     "start_time": "2026-01-14T18:23:50.138170",
+     "start_time": "2026-01-16T17:59:55.387865",
      "status": "completed"
     },
     "tags": []
@@ -500,19 +500,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f8c1770c",
+   "id": "1f53d42e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-14T18:23:50.195930Z",
-     "iopub.status.busy": "2026-01-14T18:23:50.195580Z",
-     "iopub.status.idle": "2026-01-14T18:23:50.202521Z",
-     "shell.execute_reply": "2026-01-14T18:23:50.200413Z"
+     "iopub.execute_input": "2026-01-16T17:59:55.454443Z",
+     "iopub.status.busy": "2026-01-16T17:59:55.454058Z",
+     "iopub.status.idle": "2026-01-16T17:59:55.462123Z",
+     "shell.execute_reply": "2026-01-16T17:59:55.461328Z"
     },
     "papermill": {
-     "duration": 0.015809,
-     "end_time": "2026-01-14T18:23:50.204753",
+     "duration": 0.018618,
+     "end_time": "2026-01-16T17:59:55.464641",
      "exception": false,
-     "start_time": "2026-01-14T18:23:50.188944",
+     "start_time": "2026-01-16T17:59:55.446023",
      "status": "completed"
     },
     "tags": []
@@ -527,19 +527,19 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d0a72f48",
+   "id": "e0fa0919",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-14T18:23:50.216531Z",
-     "iopub.status.busy": "2026-01-14T18:23:50.216167Z",
-     "iopub.status.idle": "2026-01-14T18:23:50.236653Z",
-     "shell.execute_reply": "2026-01-14T18:23:50.235952Z"
+     "iopub.execute_input": "2026-01-16T17:59:55.480319Z",
+     "iopub.status.busy": "2026-01-16T17:59:55.478644Z",
+     "iopub.status.idle": "2026-01-16T17:59:55.500003Z",
+     "shell.execute_reply": "2026-01-16T17:59:55.499147Z"
     },
     "papermill": {
-     "duration": 0.029414,
-     "end_time": "2026-01-14T18:23:50.239052",
+     "duration": 0.032265,
+     "end_time": "2026-01-16T17:59:55.502848",
      "exception": false,
-     "start_time": "2026-01-14T18:23:50.209638",
+     "start_time": "2026-01-16T17:59:55.470583",
      "status": "completed"
     },
     "tags": []
@@ -550,16 +550,14 @@
      "output_type": "stream",
      "text": [
       "Accuracy: 0.475\n",
-      "Precision: 0.4444444444444444\n",
-      "Recall: 0.2711864406779661\n",
-      "F1: 0.3368421052631579\n"
+      "Precision: 0.4358974358974359\n",
+      "Recall: 0.29310344827586204\n",
+      "F1: 0.35051546391752575\n"
      ]
     }
    ],
    "source": [
     "# Assessing model. \n",
-    "\n",
-    "\n",
     "\n",
     "accuracy = accuracy_score(y_test, preds)\n",
     "precision = precision_score(y_test, preds)\n",
@@ -574,13 +572,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab2fa1a4",
+   "id": "9c086847",
    "metadata": {
     "papermill": {
-     "duration": 0.004962,
-     "end_time": "2026-01-14T18:23:50.249132",
+     "duration": 0.005963,
+     "end_time": "2026-01-16T17:59:55.514957",
      "exception": false,
-     "start_time": "2026-01-14T18:23:50.244170",
+     "start_time": "2026-01-16T17:59:55.508994",
      "status": "completed"
     },
     "tags": []
@@ -588,6 +586,132 @@
    "source": [
     "We can see that the simple logistic regression model trained on all the parameters performs slightly better than random guessing. If we wish to improve upon this, we can try different combinations of features, or tune the parameters themselves."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c4e95a9",
+   "metadata": {
+    "papermill": {
+     "duration": 0.005904,
+     "end_time": "2026-01-16T17:59:55.526841",
+     "exception": false,
+     "start_time": "2026-01-16T17:59:55.520937",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "### Random Forest Regression model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "bcc01533",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-16T17:59:55.542535Z",
+     "iopub.status.busy": "2026-01-16T17:59:55.540927Z",
+     "iopub.status.idle": "2026-01-16T17:59:56.382861Z",
+     "shell.execute_reply": "2026-01-16T17:59:56.381722Z"
+    },
+    "papermill": {
+     "duration": 0.852441,
+     "end_time": "2026-01-16T17:59:56.385329",
+     "exception": false,
+     "start_time": "2026-01-16T17:59:55.532888",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "forestModel = RandomForestClassifier(n_estimators=100, random_state=22).fit(X_train, y_train)\n",
+    "\n",
+    "predsF = forestModel.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "216535db",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-16T17:59:56.396553Z",
+     "iopub.status.busy": "2026-01-16T17:59:56.395288Z",
+     "iopub.status.idle": "2026-01-16T17:59:56.416880Z",
+     "shell.execute_reply": "2026-01-16T17:59:56.415493Z"
+    },
+    "papermill": {
+     "duration": 0.02897,
+     "end_time": "2026-01-16T17:59:56.419126",
+     "exception": false,
+     "start_time": "2026-01-16T17:59:56.390156",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.5333333333333333\n",
+      "Precision: 0.5217391304347826\n",
+      "Recall: 0.41379310344827586\n",
+      "F1: 0.46153846153846156\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assessing Forest Model\n",
+    "\n",
+    "accuracyF = accuracy_score(y_test, predsF)\n",
+    "precisionF = precision_score(y_test, predsF)\n",
+    "recallF = recall_score(y_test, predsF)\n",
+    "f1F = f1_score(y_test, predsF)\n",
+    "\n",
+    "print('Accuracy: ' + str(accuracyF) + \"\\n\"\n",
+    "     + 'Precision: ' + str(precisionF) + \"\\n\"\n",
+    "     + 'Recall: ' + str(recallF) + \"\\n\" \n",
+    "     + 'F1: ' + str(f1F))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b2b8784",
+   "metadata": {
+    "papermill": {
+     "duration": 0.00391,
+     "end_time": "2026-01-16T17:59:56.426934",
+     "exception": false,
+     "start_time": "2026-01-16T17:59:56.423024",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "The forest model clearly has better performance compared to the logistic regression model. and may do even better if trained on different features. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c140de51",
+   "metadata": {
+    "papermill": {
+     "duration": 0.003851,
+     "end_time": "2026-01-16T17:59:56.434636",
+     "exception": false,
+     "start_time": "2026-01-16T17:59:56.430785",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -600,7 +724,7 @@
      "sourceType": "datasetVersion"
     }
    ],
-   "dockerImageVersionId": 31239,
+   "dockerImageVersionId": 31234,
    "isGpuEnabled": false,
    "isInternetEnabled": true,
    "language": "python",
@@ -625,14 +749,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 10.389358,
-   "end_time": "2026-01-14T18:23:53.285707",
+   "duration": 10.624507,
+   "end_time": "2026-01-16T17:59:57.161432",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2026-01-14T18:23:42.896349",
+   "start_time": "2026-01-16T17:59:46.536925",
    "version": "2.6.0"
   }
  },
