--- a/breast-cancer-diagnosis-model.ipynb
+++ b/breast-cancer-diagnosis-model.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dc251f03",
+   "id": "898a2801",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2026-01-16T17:59:50.417257Z",
-     "iopub.status.busy": "2026-01-16T17:59:50.416876Z",
-     "iopub.status.idle": "2026-01-16T17:59:51.756994Z",
-     "shell.execute_reply": "2026-01-16T17:59:51.755765Z"
+     "iopub.execute_input": "2026-01-17T18:52:39.077589Z",
+     "iopub.status.busy": "2026-01-17T18:52:39.076572Z",
+     "iopub.status.idle": "2026-01-17T18:52:40.197977Z",
+     "shell.execute_reply": "2026-01-17T18:52:40.196914Z"
     },
     "papermill": {
-     "duration": 1.348665,
-     "end_time": "2026-01-16T17:59:51.759653",
+     "duration": 1.129111,
+     "end_time": "2026-01-17T18:52:40.199969",
      "exception": false,
-     "start_time": "2026-01-16T17:59:50.410988",
+     "start_time": "2026-01-17T18:52:39.070858",
      "status": "completed"
     },
     "tags": []
@@ -54,25 +54,27 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "63991c47",
+   "id": "4b7886c4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-16T17:59:51.769289Z",
-     "iopub.status.busy": "2026-01-16T17:59:51.768849Z",
-     "iopub.status.idle": "2026-01-16T17:59:54.716418Z",
-     "shell.execute_reply": "2026-01-16T17:59:54.715185Z"
+     "iopub.execute_input": "2026-01-17T18:52:40.209082Z",
+     "iopub.status.busy": "2026-01-17T18:52:40.207863Z",
+     "iopub.status.idle": "2026-01-17T18:52:42.685600Z",
+     "shell.execute_reply": "2026-01-17T18:52:42.684560Z"
     },
     "papermill": {
-     "duration": 2.955258,
-     "end_time": "2026-01-16T17:59:54.718946",
+     "duration": 2.484354,
+     "end_time": "2026-01-17T18:52:42.687787",
      "exception": false,
-     "start_time": "2026-01-16T17:59:51.763688",
+     "start_time": "2026-01-17T18:52:40.203433",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
+    "# Imports\n",
+    "\n",
     "import seaborn as sns\n",
     "import matplotlib as plt\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -82,19 +84,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6a04b3a0",
+   "id": "aec5c164",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-16T17:59:54.727369Z",
-     "iopub.status.busy": "2026-01-16T17:59:54.726759Z",
-     "iopub.status.idle": "2026-01-16T17:59:54.780703Z",
-     "shell.execute_reply": "2026-01-16T17:59:54.779513Z"
+     "iopub.execute_input": "2026-01-17T18:52:42.696854Z",
+     "iopub.status.busy": "2026-01-17T18:52:42.696027Z",
+     "iopub.status.idle": "2026-01-17T18:52:42.742339Z",
+     "shell.execute_reply": "2026-01-17T18:52:42.741403Z"
     },
     "papermill": {
-     "duration": 0.060868,
-     "end_time": "2026-01-16T17:59:54.783051",
+     "duration": 0.053244,
+     "end_time": "2026-01-17T18:52:42.744394",
      "exception": false,
-     "start_time": "2026-01-16T17:59:54.722183",
+     "start_time": "2026-01-17T18:52:42.691150",
      "status": "completed"
     },
     "tags": []
@@ -236,19 +238,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f183bd76",
+   "id": "4da848a1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-16T17:59:54.791933Z",
-     "iopub.status.busy": "2026-01-16T17:59:54.791504Z",
-     "iopub.status.idle": "2026-01-16T17:59:54.798994Z",
-     "shell.execute_reply": "2026-01-16T17:59:54.797265Z"
+     "iopub.execute_input": "2026-01-17T18:52:42.752783Z",
+     "iopub.status.busy": "2026-01-17T18:52:42.752350Z",
+     "iopub.status.idle": "2026-01-17T18:52:42.758180Z",
+     "shell.execute_reply": "2026-01-17T18:52:42.757344Z"
     },
     "papermill": {
-     "duration": 0.014893,
-     "end_time": "2026-01-16T17:59:54.801452",
+     "duration": 0.012479,
+     "end_time": "2026-01-17T18:52:42.760123",
      "exception": false,
-     "start_time": "2026-01-16T17:59:54.786559",
+     "start_time": "2026-01-17T18:52:42.747644",
      "status": "completed"
     },
     "tags": []
@@ -266,19 +268,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0fe815ed",
+   "id": "f5e18e7d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-16T17:59:54.810488Z",
-     "iopub.status.busy": "2026-01-16T17:59:54.809762Z",
-     "iopub.status.idle": "2026-01-16T17:59:54.818801Z",
-     "shell.execute_reply": "2026-01-16T17:59:54.817901Z"
+     "iopub.execute_input": "2026-01-17T18:52:42.768291Z",
+     "iopub.status.busy": "2026-01-17T18:52:42.767992Z",
+     "iopub.status.idle": "2026-01-17T18:52:42.776586Z",
+     "shell.execute_reply": "2026-01-17T18:52:42.775535Z"
     },
     "papermill": {
-     "duration": 0.015765,
-     "end_time": "2026-01-16T17:59:54.820823",
+     "duration": 0.014743,
+     "end_time": "2026-01-17T18:52:42.778392",
      "exception": false,
-     "start_time": "2026-01-16T17:59:54.805058",
+     "start_time": "2026-01-17T18:52:42.763649",
      "status": "completed"
     },
     "tags": []
@@ -312,13 +314,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bee48718",
+   "id": "68c3b309",
    "metadata": {
     "papermill": {
-     "duration": 0.003635,
-     "end_time": "2026-01-16T17:59:54.828171",
+     "duration": 0.003276,
+     "end_time": "2026-01-17T18:52:42.785098",
      "exception": false,
-     "start_time": "2026-01-16T17:59:54.824536",
+     "start_time": "2026-01-17T18:52:42.781822",
      "status": "completed"
     },
     "tags": []
@@ -330,19 +332,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8dda917f",
+   "id": "173f573d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-16T17:59:54.837139Z",
-     "iopub.status.busy": "2026-01-16T17:59:54.836773Z",
-     "iopub.status.idle": "2026-01-16T17:59:55.195797Z",
-     "shell.execute_reply": "2026-01-16T17:59:55.194575Z"
+     "iopub.execute_input": "2026-01-17T18:52:42.794076Z",
+     "iopub.status.busy": "2026-01-17T18:52:42.793370Z",
+     "iopub.status.idle": "2026-01-17T18:52:43.114026Z",
+     "shell.execute_reply": "2026-01-17T18:52:43.113029Z"
     },
     "papermill": {
-     "duration": 0.366684,
-     "end_time": "2026-01-16T17:59:55.198463",
+     "duration": 0.327471,
+     "end_time": "2026-01-17T18:52:43.116031",
      "exception": false,
-     "start_time": "2026-01-16T17:59:54.831779",
+     "start_time": "2026-01-17T18:52:42.788560",
      "status": "completed"
     },
     "tags": []
@@ -351,7 +353,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7d4f80346720>"
+       "<seaborn.axisgrid.FacetGrid at 0x787260b247d0>"
       ]
      },
      "execution_count": 6,
@@ -377,13 +379,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56fffd41",
+   "id": "690dab6e",
    "metadata": {
     "papermill": {
-     "duration": 0.003786,
-     "end_time": "2026-01-16T17:59:55.207040",
+     "duration": 0.003698,
+     "end_time": "2026-01-17T18:52:43.123487",
      "exception": false,
-     "start_time": "2026-01-16T17:59:55.203254",
+     "start_time": "2026-01-17T18:52:43.119789",
      "status": "completed"
     },
     "tags": []
@@ -395,19 +397,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3b89eb76",
+   "id": "70580c63",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-16T17:59:55.216963Z",
-     "iopub.status.busy": "2026-01-16T17:59:55.216486Z",
-     "iopub.status.idle": "2026-01-16T17:59:55.359218Z",
-     "shell.execute_reply": "2026-01-16T17:59:55.358079Z"
+     "iopub.execute_input": "2026-01-17T18:52:43.132153Z",
+     "iopub.status.busy": "2026-01-17T18:52:43.131622Z",
+     "iopub.status.idle": "2026-01-17T18:52:43.245914Z",
+     "shell.execute_reply": "2026-01-17T18:52:43.244871Z"
     },
     "papermill": {
-     "duration": 0.151414,
-     "end_time": "2026-01-16T17:59:55.362314",
+     "duration": 0.12136,
+     "end_time": "2026-01-17T18:52:43.248337",
      "exception": false,
-     "start_time": "2026-01-16T17:59:55.210900",
+     "start_time": "2026-01-17T18:52:43.126977",
      "status": "completed"
     },
     "tags": []
@@ -428,19 +430,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2b6d7543",
+   "id": "b8a52fc9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-16T17:59:55.371837Z",
-     "iopub.status.busy": "2026-01-16T17:59:55.371268Z",
-     "iopub.status.idle": "2026-01-16T17:59:55.381754Z",
-     "shell.execute_reply": "2026-01-16T17:59:55.380506Z"
+     "iopub.execute_input": "2026-01-17T18:52:43.257709Z",
+     "iopub.status.busy": "2026-01-17T18:52:43.256784Z",
+     "iopub.status.idle": "2026-01-17T18:52:43.266338Z",
+     "shell.execute_reply": "2026-01-17T18:52:43.265215Z"
     },
     "papermill": {
-     "duration": 0.017526,
-     "end_time": "2026-01-16T17:59:55.383736",
+     "duration": 0.016159,
+     "end_time": "2026-01-17T18:52:43.268298",
      "exception": false,
-     "start_time": "2026-01-16T17:59:55.366210",
+     "start_time": "2026-01-17T18:52:43.252139",
      "status": "completed"
     },
     "tags": []
@@ -458,19 +460,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1eb5bec3",
+   "id": "b8313bd7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-16T17:59:55.393924Z",
-     "iopub.status.busy": "2026-01-16T17:59:55.392902Z",
-     "iopub.status.idle": "2026-01-16T17:59:55.437139Z",
-     "shell.execute_reply": "2026-01-16T17:59:55.434780Z"
+     "iopub.execute_input": "2026-01-17T18:52:43.277976Z",
+     "iopub.status.busy": "2026-01-17T18:52:43.276774Z",
+     "iopub.status.idle": "2026-01-17T18:52:43.316719Z",
+     "shell.execute_reply": "2026-01-17T18:52:43.314123Z"
     },
     "papermill": {
-     "duration": 0.051658,
-     "end_time": "2026-01-16T17:59:55.439523",
+     "duration": 0.046985,
+     "end_time": "2026-01-17T18:52:43.319076",
      "exception": false,
-     "start_time": "2026-01-16T17:59:55.387865",
+     "start_time": "2026-01-17T18:52:43.272091",
      "status": "completed"
     },
     "tags": []
@@ -500,19 +502,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1f53d42e",
+   "id": "c2a1d437",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-16T17:59:55.454443Z",
-     "iopub.status.busy": "2026-01-16T17:59:55.454058Z",
-     "iopub.status.idle": "2026-01-16T17:59:55.462123Z",
-     "shell.execute_reply": "2026-01-16T17:59:55.461328Z"
+     "iopub.execute_input": "2026-01-17T18:52:43.332990Z",
+     "iopub.status.busy": "2026-01-17T18:52:43.332610Z",
+     "iopub.status.idle": "2026-01-17T18:52:43.341225Z",
+     "shell.execute_reply": "2026-01-17T18:52:43.340408Z"
     },
     "papermill": {
-     "duration": 0.018618,
-     "end_time": "2026-01-16T17:59:55.464641",
+     "duration": 0.018856,
+     "end_time": "2026-01-17T18:52:43.343847",
      "exception": false,
-     "start_time": "2026-01-16T17:59:55.446023",
+     "start_time": "2026-01-17T18:52:43.324991",
      "status": "completed"
     },
     "tags": []
@@ -527,19 +529,19 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e0fa0919",
+   "id": "89d76a70",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-16T17:59:55.480319Z",
-     "iopub.status.busy": "2026-01-16T17:59:55.478644Z",
-     "iopub.status.idle": "2026-01-16T17:59:55.500003Z",
-     "shell.execute_reply": "2026-01-16T17:59:55.499147Z"
+     "iopub.execute_input": "2026-01-17T18:52:43.359215Z",
+     "iopub.status.busy": "2026-01-17T18:52:43.357512Z",
+     "iopub.status.idle": "2026-01-17T18:52:43.380543Z",
+     "shell.execute_reply": "2026-01-17T18:52:43.379688Z"
     },
     "papermill": {
-     "duration": 0.032265,
-     "end_time": "2026-01-16T17:59:55.502848",
+     "duration": 0.03323,
+     "end_time": "2026-01-17T18:52:43.382986",
      "exception": false,
-     "start_time": "2026-01-16T17:59:55.470583",
+     "start_time": "2026-01-17T18:52:43.349756",
      "status": "completed"
     },
     "tags": []
@@ -572,13 +574,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c086847",
+   "id": "94d8c6b8",
    "metadata": {
     "papermill": {
-     "duration": 0.005963,
-     "end_time": "2026-01-16T17:59:55.514957",
+     "duration": 0.006685,
+     "end_time": "2026-01-17T18:52:43.395628",
      "exception": false,
-     "start_time": "2026-01-16T17:59:55.508994",
+     "start_time": "2026-01-17T18:52:43.388943",
      "status": "completed"
     },
     "tags": []
@@ -589,13 +591,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c4e95a9",
+   "id": "86d87f64",
    "metadata": {
     "papermill": {
-     "duration": 0.005904,
-     "end_time": "2026-01-16T17:59:55.526841",
+     "duration": 0.005815,
+     "end_time": "2026-01-17T18:52:43.407372",
      "exception": false,
-     "start_time": "2026-01-16T17:59:55.520937",
+     "start_time": "2026-01-17T18:52:43.401557",
      "status": "completed"
     },
     "tags": []
@@ -607,19 +609,19 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "bcc01533",
+   "id": "72c107e6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-16T17:59:55.542535Z",
-     "iopub.status.busy": "2026-01-16T17:59:55.540927Z",
-     "iopub.status.idle": "2026-01-16T17:59:56.382861Z",
-     "shell.execute_reply": "2026-01-16T17:59:56.381722Z"
+     "iopub.execute_input": "2026-01-17T18:52:43.420661Z",
+     "iopub.status.busy": "2026-01-17T18:52:43.420307Z",
+     "iopub.status.idle": "2026-01-17T18:52:44.163586Z",
+     "shell.execute_reply": "2026-01-17T18:52:44.162441Z"
     },
     "papermill": {
-     "duration": 0.852441,
-     "end_time": "2026-01-16T17:59:56.385329",
+     "duration": 0.752553,
+     "end_time": "2026-01-17T18:52:44.165770",
      "exception": false,
-     "start_time": "2026-01-16T17:59:55.532888",
+     "start_time": "2026-01-17T18:52:43.413217",
      "status": "completed"
     },
     "tags": []
@@ -636,19 +638,19 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "216535db",
+   "id": "0b42ee99",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-01-16T17:59:56.396553Z",
-     "iopub.status.busy": "2026-01-16T17:59:56.395288Z",
-     "iopub.status.idle": "2026-01-16T17:59:56.416880Z",
-     "shell.execute_reply": "2026-01-16T17:59:56.415493Z"
+     "iopub.execute_input": "2026-01-17T18:52:44.177424Z",
+     "iopub.status.busy": "2026-01-17T18:52:44.176276Z",
+     "iopub.status.idle": "2026-01-17T18:52:44.193787Z",
+     "shell.execute_reply": "2026-01-17T18:52:44.192686Z"
     },
     "papermill": {
-     "duration": 0.02897,
-     "end_time": "2026-01-16T17:59:56.419126",
+     "duration": 0.025905,
+     "end_time": "2026-01-17T18:52:44.195876",
      "exception": false,
-     "start_time": "2026-01-16T17:59:56.390156",
+     "start_time": "2026-01-17T18:52:44.169971",
      "status": "completed"
     },
     "tags": []
@@ -681,31 +683,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b2b8784",
+   "id": "ccb634ee",
    "metadata": {
     "papermill": {
-     "duration": 0.00391,
-     "end_time": "2026-01-16T17:59:56.426934",
+     "duration": 0.003762,
+     "end_time": "2026-01-17T18:52:44.203477",
      "exception": false,
-     "start_time": "2026-01-16T17:59:56.423024",
+     "start_time": "2026-01-17T18:52:44.199715",
      "status": "completed"
     },
     "tags": []
    },
    "source": [
-    "The forest model clearly has better performance compared to the logistic regression model. and may do even better if trained on different features. "
+    "The forest model clearly has better performance compared to the logistic regression model. and may do even better if trained on different features. However, it should be noted that 53% accuracy is not a desirable score, and we can do better."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c140de51",
+   "id": "604248d6",
    "metadata": {
     "papermill": {
-     "duration": 0.003851,
-     "end_time": "2026-01-16T17:59:56.434636",
+     "duration": 0.003615,
+     "end_time": "2026-01-17T18:52:44.210810",
      "exception": false,
-     "start_time": "2026-01-16T17:59:56.430785",
+     "start_time": "2026-01-17T18:52:44.207195",
      "status": "completed"
     },
     "tags": []
@@ -749,14 +751,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 10.624507,
-   "end_time": "2026-01-16T17:59:57.161432",
+   "duration": 9.451416,
+   "end_time": "2026-01-17T18:52:44.935760",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2026-01-16T17:59:46.536925",
+   "start_time": "2026-01-17T18:52:35.484344",
    "version": "2.6.0"
   }
  },
